src/test/deca/context/invalid/provided/equals_non_compatible.deca
{
if (1 == true) {
	println("1 is equal to true");
}
}
